--- a/homework8.tex
+++ b/homework8.tex
@@ -308,13 +308,10 @@
     $\rho$ and $J$ (constrained by the continuity equation), fields $E$ and $B$, and potentials $V$
     and $A$ (constrained by the Lorenz gauge condition). Do not include formulas for $V$
     and $A$ in terms of $E$ and $B$.
-    % \begin{center}
-    %   \includegraphics[height=7cm, width=7cm]{2.JPG}
-    % \end{center}
-
     \begin{figure}[htp]
-        \includegraphics[height=3cm, width=3cm]{2.JPG}
-        \includegraphics[height=3cm, width=3cm]{2.JPG}
+      \centering
+      \includegraphics[height=6cm, width=6cm]{2.JPG}
+      \includegraphics[height=6cm, width=6cm]{3.JPG}
     \end{figure}
 
         % \textcolor{hwColor}{
