--- a/homework8.tex
+++ b/homework8.tex
@@ -314,9 +314,34 @@
       \includegraphics[height=6cm, width=6cm]{3.JPG}
     \end{figure}
 
-        % \textcolor{hwColor}{
-        %   \\
-        % }
+        \textcolor{hwColor}{
+          \\
+          $
+            \begin{cases}
+              J=\dfrac{1}{\mu_0} \bigg( \nabla \times B \bigg)
+              \\
+              \\
+              J=-\epsilon_0 \dfrac{\partial E}{\partial t}
+            \end{cases}
+            \\
+            \\
+            \\
+            \nabla^2 V=-\dfrac{\rho}{\epsilon_0}, ~~~~~~~~~~ E=\dfrac{1}{4 \pi \epsilon_0} \bigints \dfrac{\hat{r} \rho}{r^2} dr
+            \\
+            \\
+            V=\dfrac{1}{4 \pi \epsilon_0} \bigints \dfrac{\rho}{r} dr, ~~~~~~~~ E=-\nabla V
+            \\
+            \\
+            \\
+            \nabla.B=B=-\dfrac{1}{c^2} \dfrac{\partial V}{\partial t}, ~~~~~~~~~~ E=\nabla V-\dfrac{\partial A}{\partial t}
+          $
+        }
+
+      \pagebreak
+
+      \begin{center}
+        \includegraphics[height=12cm, width=15cm]{4.JPG}
+      \end{center}
     
   \end{enumerate}
 
