--- a/homework9.tex
+++ b/homework9.tex
@@ -200,19 +200,24 @@
       \item Repeat part $(a)$ for a particle in simple harmonic motion with amplitude $A$ and
       angular frequency $\omega: w(t) = A cos(\omega t) \hat{z}$. Explain the discrepancy.
 
-        % \textcolor{hwColor}{
-        %   \\
-        % }
 
       \item Consider the case of a particle in free fall (constant acceleration g). What is
       the radiation reaction force? What is the power radiated? Comment on these
       results.
 
-        % \textcolor{hwColor}{
-        %   \\
-        % }
-
     \end{enumerate}
+    
+    \begin{center}
+      \includegraphics[height=13cm, width=15cm]{1117A.JPG}
+    \end{center}
+
+    \pagebreak
+
+    \begin{center}
+      \includegraphics[height=13cm, width=15cm]{1117B.JPG}
+    \end{center}
+
+    \pagebreak
 
     \item \textbf{11.18 (40 points)} A point charge $q$, of mass $m$, is attached to a spring of constant $k$.
     At time $t=0$ it is given a kick, so its initial energy is $U_0=\dfrac{1}{2} m v^2_0$. Now it oscillates,
@@ -230,9 +235,6 @@
       with $\omega_0 \equiv \sqrt{k/m}, ~ \gamma=\omega_0 \tau,$ and $\gamma << \omega_0$ (drop $\gamma^2$ in comparison 
       to $\omega^2_0$, and when you average over a complete cycle, ignore the change in $e^{-\gamma t}$).
 
-        % \textcolor{hwColor}{
-        %   \\
-        % }
 
       \item Suppose now we have two such oscillators, and we start them off with identical
       kicks. Regardless of their relative positions and orientations, the total energy
@@ -242,11 +244,18 @@
       $4 U_0$. Find the error in this reasoning, and show that the total is actually $2 U_0$, as
       it should be.
 
-        % \textcolor{hwColor}{
-        %   \\
-        % }
 
     \end{enumerate}
+
+    \begin{center}
+      \includegraphics[height=13cm, width=15cm]{1118A.JPG}
+    \end{center}
+
+    \pagebreak
+
+    \begin{center}
+      \includegraphics[height=13cm, width=15cm]{1118B.JPG}
+    \end{center}
 
   \end{enumerate}
 
